force-app/main/default/objects/Simploud__SimploudOrgSettings__c/Simploud__SimploudOrgSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Simploud&apos;s application settings specified for specific org</description>
    <label>Simploud Org Settings</label>
</CustomObject>