force-app/main/default/objects/Simploud__SimploudOrgSettings__c/fields/Collaboration_Tool__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Tool__c</fullName>
    <description>Choose which integration should the org use. Value must be either &quot;SharePoint&quot; or &quot;Google&quot;</description>
    <inlineHelpText>&quot;SharePoint&quot; or &quot;Google&quot;</inlineHelpText>
    <label>Collaboration Tool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>