force-app/main/default/objects/Simploud__SimploudOrgSettings__c/fields/Delete_File_In_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Delete_File_In_Cloud__c</fullName>
    <description>Controlled document statuses, upon transition to which the document must be deleted from SharePoint</description>
    <inlineHelpText>Separate statuses by comma. Example: Effective,Cancelled,Obsolete</inlineHelpText>
    <label>Delete File in Cloud</label>
    <type>TextArea</type>
</CustomField>