force-app/main/default/objects/Simploud__SimploudOrgSettings__c/fields/Document_Name_Format__c.field-meta.xml
<CustomField>
    <fullName>Document_Name_Format__c</fullName>
    <defaultValue>&quot;Simploud-Document-$Id$&quot;</defaultValue>
    <description>Value from this field will be used for naming the documents when uploading them to SharePoint</description>
    <inlineHelpText>Type Simploud__Controlled_Document__c object field API names wrapped with the &apos;$&apos; symbol, separated by any symbols. Example: $Simploud__Document_Type__c$-$Name$_$Id4
You can also use constants, like this: Document-$Id$

Important: file names must be unique! Always include Id or other unique fields</inlineHelpText>
    <label>Document Name Format</label>
    <type>TextArea</type>
</CustomField>