force-app/main/default/objects/Simploud__SimploudOrgSettings__c/fields/Support_Email_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Support_Email_Replacement__c</fullName>
    <description>Email to replace admin@simploud.com within document collaboration</description>
    <inlineHelpText>Email to replace admin@simploud.com within document collaboration</inlineHelpText>
    <label>Support Email Replacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>